Do not use local buffering for streams